Changelog
=========


2.2.3 (unreleased)
------------------

- Made mail view XSS-save using the safe-html transform for the mail-body display.
  [phgross]

- Fix an issue while generating links to image-attachments in mails.
  [deiferni]


2.2.2 (2014-08-28)
------------------

- SearchableTextExtender: For mails with incorrectly declared charset,
  try decoding them as latin1 as a last resort, ignoring all errors.
  [lgraf]

- SearchableTextExtender: Don't just decode the Content-Transfer-Encoding,
  but also decode the actual content itself with the declared charset.
  [lgraf]


2.2.1 (2014-05-30)
------------------

- Fix brown bag upgrade step from 2.2.0.
  [jone]


2.2.0 (2014-05-28)
------------------

- Performance improvements:

  - Store the title from the mail subject on the object, so that
    we don't have to read the message for retreiving the title on access.
  - Cache attachment infos on mail object.
  - Cache headers for tabbed view.

  [jone]

- Make sure only a *default* value will be set for IMailSettings.mail_domain,
  but an existing value won't be overwritten when running the upgrade step twice.
  [lgraf]


2.1.1 (2014-05-12)
------------------

- Inbound view: Adapt container as the context instead of content when
  looking up default value adapter.
  [lgraf]

- Inbound view: Remove AQ wrapper when setting default values for newly
  created objects, in order to not get bogus results (due to acquisition)
  when checking whether a field is already present on the object.
  [lgraf]

- Fix From-/To-/Cc-Header encoding problem with Apple Mail.
  [jone]

- Made primary field also for dexterity-1 installations working.
  [phgross]

- Added French translation by I. Anthenien.
  [lknoepfel]

2.1.0 (2014-03-28)
------------------

- Remove "validate_sender" configuration setting.
  We always require the sender to be valid.
  [jone]

- Refactor inbound view so that customization and error-handling
  is easier possible.
  [jone]
